--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport"
   content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="./resources/index.css">
- <title>Hook a Quartz</title>
+ <title>Hook a Quartz with your left hand</title>
 </head>
 
  <div class="header">
