--- a/index.html
+++ b/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport"
-  content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="./resources/index.css">
- <title>Hook a Quartz with your left hand</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
+  <script src="./index.js"></script>
+  <title>Sticky Slider Nav</title>
 </head>
+<body>
 
- <div class="header">
-  <ul>
-   <li><a href="#home" class="current">Home</a></li>
-   <li><a href="#info">Information <link rel="webpage" href="https://www.etsy.com/shop/JansWoolHut"></a></li>
-   <li><a href="#extra">Extra</a></li>
-   <li><a href="#contact">Contact</a></li>
-   <li><a href="#facebook">Facebook</a></li>
-   <li><a href="#instagram">Instagram</a></li>
-  </ul>
- </div>
-
-<section class="portfolio_block">
-    <div class="img_box ">
-      <h1>This is the kayla stuff to sell</h1>
-      <div class="img1"><img src="./resources/Pics/Kayla.jpeg" width="50%" height="50%" alt="Hook"></div>
-      <h1>This is the Charlote brief we sell</h1>
-      <div class="img2"><img src="https://unsplash.it/600/400?image=580" width="60%" height="60%" alt></div>
-      <h1>Also</h1>
-      <div class="img1"><img src="https://unsplash.it/600/400?image=870" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img2"><img src="https://unsplash.it/600/400?image=767" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img1"><img src="https://unsplash.it/600/400?image=296" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img2"><img src="https://unsplash.it/600/400?image=168" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img1"><img src="https://unsplash.it/600/400?image=871" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img2"><img src="https://unsplash.it/600/400?image=821" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img1"><img src="https://unsplash.it/600/400?image=164" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img2"><img src="https://unsplash.it/600/400?image=872" width="50%" height="50%" alt></div>
-      <h1>Also</h1>
-      <div class="img1"><img src="https://unsplash.it/600/400?image=826" width="50%" height="50%" alt></div>
+  <section class="et-hero-tabs">
+    <h1>STICKY SLIDER NAV</h1>
+    <h3>Sliding content with sticky tab nav</h3>
+    <div class="et-hero-tabs-container">
+      <a class="et-hero-tab" href="#tab-es6">The Wool Hut</a>
+      <a class="et-hero-tab" href="#tab-flexbox">The Left Hooker</a>
+      <a class="et-hero-tab" href="#tab-react">Quirky Quartz</a>
+      <a class="et-hero-tab" href="#tab-angular">Facebook</a>
+      <a class="et-hero-tab" href="#tab-other">Contact </a>
+      <span class="et-hero-tab-slider"></span>
     </div>
   </section>
 
+  <main class="et-main">
+    <section class="et-slide" id="tab-es6">
+      <img src="./resources/Picture 1.jpeg" alt="ES6 Image">
+      <h1>Crocheting</h1>
+      <h3>something about ES6</h3>
+    </section>
+    <section class="et-slide" id="tab-flexbox">
+      <img src="./resources/Picture 2.jpeg" alt="Flexbox Image">
+      <h1>Earrings</h1>
+      <h3>something about flexbox</h3>
+    </section>
+    <section class="et-slide" id="tab-react">
+      <img src="./resources/Picture 3.jpeg" alt="React Image">
+      <h1>Christmas</h1>
+      <h3>something about React</h3>
+    </section>
+    <section class="et-slide" id="tab-angular">
+      <img src="./resources/picture 4.jpegpicture " alt="Angular Image">
+      <h1>Angular</h1>
+      <h3>something about Angular</h3>
+    </section>
+    <section class="et-slide" id="tab-other">
+      <img src="./resources/picture 5.jpeg" alt="Other Image">
+      <h1>Other</h1>
+      <h3>something about other</h3>
+    </section>
+  </main>
 
-
-
-
-
+</body>
 </html>
+
