--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
   <script src="./index.js"></script>
-  <title>Sticky Slider Nav</title>
+  <title>The Crafty Lefties and there hands of Gold</title>
 </head>
 <body>
 
