--- a/index.html
+++ b/index.html
@@ -1,55 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./resources/index.css">
-  <script src="./index.js"></script>
-  <title>The Crafty Lefties and there hands of Gold</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="This is the page for brussels" />
+    <meta name="author" content="Fabrice Elono" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-
+      awesome/6.2.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./resources/index.css" />
+    <!-- favicon section -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../images/favicon_io/favicon-16x16.png"
+    />
+    <!-- end -->
+    <title>TravelStorm:Brussels</title>
+  </head>
+  <body>
+    <header>
+      <picture class="logo-container">
+        <a  href="../index.html">TravelStorm</a>
+      </picture>
+      <nav class="anchor-container flex-center">
+        <a href="../index.html">Home</a>
+        <a href="../pages/brussels.html" class="current-page">Brussels</a>
+        <a href="../pages/kathmandu.html">Kathmandu</a>
+        <a href="../pages/newcastle.html">Newcastle</a>
+        <a href="../pages/telaviv.html">Tel-Aviv</a>
+      </nav>
+    </header>
+    <main>
+      <h1>Belgium the <i class="fa-solid fa-heart"></i> of Europe</h1>
+      <h3>
+        Belgium, a European country, is known for its rich cultural heritage,
+        famous for chocolate, waffles, and medieval towns, while also serving as
+        the headquarters for the European Union and NATO.
+      </h3>
+      <button>Read More</button>
+    </main>
+    <section class="places">
+      <h2>Best places to visit</h2>
+      <div class="card-container">
+        <div class="card">
+          <img src="../images/brussels/antwerp2.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Museum Aan de Stroom</h3>
+            <p>
+              Museum Aan de Stroom (MAS) stands as an architectural marvel in
+              Antwerp, offering captivating exhibits that delve into the city's
+              rich maritime history and cultural heritage. Explore its diverse
+              collections and panoramic views of the bustling harbor.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/cinquantenaire.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Cinquantenaire Park</h3>
+            <p>
+              Cinquantenaire Park, a symbol of grandeur and tranquility, invites
+              visitors to stroll amidst its lush greenery and majestic arches.
+              Discover its historical significance and enjoy leisurely picnics
+              while admiring the stunning Triumphal Arch.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/atomium.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Atomium</h3>
+            <p>
+              The Atomium, an iconic symbol of Brussels, offers an unforgettable
+              journey through its futuristic design and intriguing exhibitions.
+              Ascend to its panoramic spheres for breathtaking views of the city
+              and delve into the realms of science and innovation.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+      </div>
+      <div class="card-container">
+        <div class="card">
+          <img src="../images/brussels/ghent.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Ghent</h3>
+            <p>
+              Ghent enchants with its medieval charm and vibrant cultural scene.
+              Wander through cobblestone streets adorned with historic
+              architecture, explore its illustrious museums, and savor the
+              flavors of Belgian cuisine amidst a backdrop of timeless beauty.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/grotemarkt.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Grote Markt</h3>
+            <p>
+              Grote Markt, the bustling central square of Brussels, exudes charm
+              with its ornate guildhalls and the stunning Town Hall. Immerse
+              yourself in the lively atmosphere, dine at quaint cafes, and
+              admire the exquisite architecture of this historic landmark.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/brussels/portantwe.jpg" alt="image" />
+          <div class="card-content">
+            <h3>Port of antwerp</h3>
+            <p>
+              The Port of Antwerp, Europe's second-largest port, is a bustling
+              hub of trade and maritime activity. Witness the dynamic
+              waterfront, bustling with ships from around the world, and delve
+              into the port's fascinating history and modern operations.
+            </p>
+            <button>Read more</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="reasons-section">
+      <div class="content">
+        <h3>Why Brussels ?</h3>
+        <p>
+          Discover Brussels, where history blends with modernity, offering a
+          tapestry of cultural wonders, culinary delights, and architectural
+          marvels awaiting exploration.
+        </p>
+      </div>
 
-  <section class="et-hero-tabs">
-    <h1>STICKY SLIDER NAV</h1>
-    <h3>Sliding content with sticky tab nav</h3>
-    <div class="et-hero-tabs-container">
-      <a class="et-hero-tab" href="#tab-es6">The Wool Hut</a>
-      <a class="et-hero-tab" href="#tab-flexbox">The Left Hooker</a>
-      <a class="et-hero-tab" href="#tab-react">Quirky Quartz</a>
-      <a class="et-hero-tab" href="#tab-angular">Facebook</a>
-      <a class="et-hero-tab" href="#tab-other">Contact </a>
-      <span class="et-hero-tab-slider"></span>
-    </div>
-  </section>
-
-  <main class="et-main">
-    <section class="et-slide" id="tab-es6">
-      <img src="./resources/Picture 1.jpeg" alt="ES6 Image">
-      <h1>Crocheting</h1>
-      <h3>something about ES6</h3>
+      <img src="../images/brussels/belgianflag.jpg" alt="image" />
     </section>
-    <section class="et-slide" id="tab-flexbox">
-      <img src="./resources/Picture 2.jpeg" alt="Flexbox Image">
-      <h1>Earrings</h1>
-      <h3>something about flexbox</h3>
+    <section class="testimony">
+      <div class="testimony-content">
+        <i class="fa-solid fa-quote-left"></i>
+        <div class="testimony-person">
+          <img src="../images/brussels/randomuser.jpg" alt="image" />
+          <div class="person-info">
+            <h3>James Usaka</h3>
+            <h5>Computer Science Student, Cameroon</h5>
+            <div class="testimony-text">
+              <h4>It was an amazing experience !!!</h4>
+              <p>
+                "I went in Brussels in 2023 were I had my exchange brussels it
+                is such a beautiful city it blends different cultures with
+                people coming from diverse places . I improved my French level
+                and I discovered Flemish as well"
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <section class="et-slide" id="tab-react">
-      <img src="./resources/Picture 3.jpeg" alt="React Image">
-      <h1>Christmas</h1>
-      <h3>something about React</h3>
-    </section>
-    <section class="et-slide" id="tab-angular">
-      <img src="./resources/picture 4.jpegpicture " alt="Angular Image">
-      <h1>Angular</h1>
-      <h3>something about Angular</h3>
-    </section>
-    <section class="et-slide" id="tab-other">
-      <img src="./resources/picture 5.jpeg" alt="Other Image">
-      <h1>Other</h1>
-      <h3>something about other</h3>
-    </section>
-  </main>
-
-</body>
+    <footer class="flex-center flex-column">
+      <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
+      <div class="flex-center">
+        <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+      </div>
+    </footer>
+  </body>
 </html>
 
