from Travel to TLH

--- a/index.html
+++ b/index.html
@@ -19,32 +19,29 @@
       href="../images/favicon_io/favicon-16x16.png"
     />
     <!-- end -->
-    <title>TravelStorm:Brussels</title>
+    <title>The Left Hooker</title>
   </head>
   <body>
     <header>
-      <picture class="logo-container">
-        <a  href="../index.html">TravelStorm</a>
-      </picture>
       <nav class="anchor-container flex-center">
         <a href="../index.html">Home</a>
-        <a href="../pages/brussels.html" class="current-page">Brussels</a>
-        <a href="../pages/kathmandu.html">Kathmandu</a>
-        <a href="../pages/newcastle.html">Newcastle</a>
-        <a href="../pages/telaviv.html">Tel-Aviv</a>
+        <a href="../pages/brussels.html" class="current-page">Key rings</a>
+        <a href="../pages/kathmandu.html">Babies</a>
+        <a href="../pages/newcastle.html">Other</a>
+        <a href="../pages/telaviv.html">Other2</a>
       </nav>
     </header>
     <main>
-      <h1>Belgium the <i class="fa-solid fa-heart"></i> of Europe</h1>
+      <h1>Crochered keyrings </h1>
       <h3>
-        Belgium, a European country, is known for its rich cultural heritage,
-        famous for chocolate, waffles, and medieval towns, while also serving as
-        the headquarters for the European Union and NATO.
+        Cute little key rings which will also look great clipped to bags or jackets. 
+        If you request a particular colour, please let me know in the comment box on the order form. 
+        Variety of designs including whales, doughnuts, ice creams, fruit, flowers and animals.
       </h3>
       <button>Read More</button>
     </main>
     <section class="places">
-      <h2>Best places to visit</h2>
+      <h2>Key rings on sale</h2>
       <div class="card-container">
         <div class="card">
           <img src="../images/brussels/antwerp2.jpg" alt="image" />
@@ -130,15 +127,25 @@
     </section>
     <section class="reasons-section">
       <div class="content">
-        <h3>Why Brussels ?</h3>
+        <h3>Reviews</h3>
         <p>
-          Discover Brussels, where history blends with modernity, offering a
-          tapestry of cultural wonders, culinary delights, and architectural
-          marvels awaiting exploration.
+          steph on 08 Nov, 2021
+          5 out of 5 stars    
+          Beautiful quality , can’t wait to put it on my baby when she’s born!
+          <br>
+          <br>
+          Charlotte Ann on 23 Sep, 2021
+          5 out of 5 stars 
+          These little booties are just so beautiful. Great craft work womanship keep it. 😊
+        </p>
+      
+          
+
+   
+
+
         </p>
       </div>
-
-      <img src="../images/brussels/belgianflag.jpg" alt="image" />
     </section>
     <section class="testimony">
       <div class="testimony-content">
@@ -146,15 +153,23 @@
         <div class="testimony-person">
           <img src="../images/brussels/randomuser.jpg" alt="image" />
           <div class="person-info">
-            <h3>James Usaka</h3>
-            <h5>Computer Science Student, Cameroon</h5>
+            <picture>
+              <img src="./resources/Pics/80392633_10157889155694549_3400183161357860864_n.jpg" alt="image" />
+            </picture>
+            <h3>Michaela Lowery</h3>
+            <h5>Crocheting as part of The Wool Hut, Sunderland</h5>
             <div class="testimony-text">
-              <h4>It was an amazing experience !!!</h4>
+              <h4>Trying to show that crocheting can be cool, trendy and beautiful ✌️ 🧶 !!!</h4>
               <p>
-                "I went in Brussels in 2023 were I had my exchange brussels it
-                is such a beautiful city it blends different cultures with
-                people coming from diverse places . I improved my French level
-                and I discovered Flemish as well"
+                "I’m Kayla, a young girl who started off knitting at 18 just after my Nana passed 
+                away who knitted all day long. My mam opened a wool shop and I was inspired to give 
+                it a go. By 19 I learnt myself to crochet from online and have continued since. 
+                I can crochet booties, toys, baby clothing, blankets, mermaid tails, accessories 
+                all sorts of unique products. I enjoy being creative and giving myself a challenge. 
+                I’m also left handed which can make things a bit tricky as certain patterns don’t 
+                always match up to how a lefty crochets. I hope one day to make my own patterns and 
+                designs to help those who are left handed have an easier crochet world. 
+                Happy crocheting 🧶"
               </p>
             </div>
           </div>
