--- a/index.html
+++ b/index.html
@@ -33,43 +33,34 @@
       <button>Read More</button>
     </main>
     <section class="places">
-      <h2>Key rings on sale</h2>
+      <h2>Items for sale or anything else to be said</h2>
       <div class="card-container">
         <div class="card">
-          <img src="../images/brussels/antwerp2.jpg" alt="image" />
+          <img src="/resources/Pics/Spiders/410621816_885748943186206_2405707526211154711_n.jpg" alt="image" />
           <div class="card-content">
-            <h3>Museum Aan de Stroom</h3>
+            <h3>Spiders</h3>
             <p>
-              Museum Aan de Stroom (MAS) stands as an architectural marvel in
-              Antwerp, offering captivating exhibits that delve into the city's
-              rich maritime history and cultural heritage. Explore its diverse
-              collections and panoramic views of the bustling harbor.
+              Paragraph about Spiders
             </p>
             <button>Read more</button>
           </div>
         </div>
         <div class="card">
-          <img src="../images/brussels/cinquantenaire.jpg" alt="image" />
+          <img src="/resources/Pics/406606697_853077469850679_1751295629011722068_n.jpg" alt="image" />
           <div class="card-content">
-            <h3>Cinquantenaire Park</h3>
+            <h3>Crochered Animals</h3>
             <p>
-              Cinquantenaire Park, a symbol of grandeur and tranquility, invites
-              visitors to stroll amidst its lush greenery and majestic arches.
-              Discover its historical significance and enjoy leisurely picnics
-              while admiring the stunning Triumphal Arch.
+              Something about Animals
             </p>
             <button>Read more</button>
           </div>
         </div>
         <div class="card">
-          <img src="../images/brussels/atomium.jpg" alt="image" />
+          <img src="/resources/Pics/Baby/410562622_721794069570840_5274762333702961674_n.jpg" alt="image" />
           <div class="card-content">
-            <h3>Atomium</h3>
+            <h3>Baby Booties</h3>
             <p>
-              The Atomium, an iconic symbol of Brussels, offers an unforgettable
-              journey through its futuristic design and intriguing exhibitions.
-              Ascend to its panoramic spheres for breathtaking views of the city
-              and delve into the realms of science and innovation.
+              Something about baby booties
             </p>
             <button>Read more</button>
           </div>
@@ -77,40 +68,31 @@
       </div>
       <div class="card-container">
         <div class="card">
-          <img src="../images/brussels/ghent.jpg" alt="image" />
+          <img src="/resources/Pics/Christmas/410517231_316249994653706_1429656246066646992_n.jpg" alt="image" />
           <div class="card-content">
-            <h3>Ghent</h3>
+            <h3>Christmas and festive holidays</h3>
             <p>
-              Ghent enchants with its medieval charm and vibrant cultural scene.
-              Wander through cobblestone streets adorned with historic
-              architecture, explore its illustrious museums, and savor the
-              flavors of Belgian cuisine amidst a backdrop of timeless beauty.
+              Something about Ghonks
             </p>
             <button>Read more</button>
           </div>
         </div>
         <div class="card">
-          <img src="../images/brussels/grotemarkt.jpg" alt="image" />
+          <img src="/resources/Pics/Halloween/385524995_347589357876495_1123168644865994161_n.jpg" alt="image" />
           <div class="card-content">
-            <h3>Grote Markt</h3>
+            <h3>Pumpkins</h3>
             <p>
-              Grote Markt, the bustling central square of Brussels, exudes charm
-              with its ornate guildhalls and the stunning Town Hall. Immerse
-              yourself in the lively atmosphere, dine at quaint cafes, and
-              admire the exquisite architecture of this historic landmark.
+              Bla bla bla
             </p>
             <button>Read more</button>
           </div>
         </div>
         <div class="card">
-          <img src="../images/brussels/portantwe.jpg" alt="image" />
+          <img src="/resources/Pics/406631775_373466172010723_728143115322754474_n.jpg" alt="image" />
           <div class="card-content">
-            <h3>Port of antwerp</h3>
+            <h3>Scarfs and hats</h3>
             <p>
-              The Port of Antwerp, Europe's second-largest port, is a bustling
-              hub of trade and maritime activity. Witness the dynamic
-              waterfront, bustling with ships from around the world, and delve
-              into the port's fascinating history and modern operations.
+              something about scarfs and hats
             </p>
             <button>Read more</button>
           </div>
