--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <section class="reasons-section">
       <div class="content">
         <h3>Video</h3>
-          <video controls width="640" height="360"><source src="/resources/Pics/Kayla Main.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+          <video controls width="640" height="360"><source src="/resources/Pics/Kayla-Main.mp4" type="video/mp4">Your browser does not support the video tag.</video>
       </div>
     </section>
     <section class="testimony">
