--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <p>2024 &copy; All rights reserved to The left hooker.</p>
       <div class="flex-center">
         <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
-        <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61552557842975"><i class="icon hover fa-brands fa-facebook"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
@@ -143,4 +143,3 @@
     </footer>
   </body>
 </html>
-
