--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <picture>
               <img src="./resources/Pics/80392633_10157889155694549_3400183161357860864_n.jpg" alt="image" />
             </picture>
-            <h3>Michaela Lowery</h3>
+            <h3>The Left Hooker</h3>
             <h5>Crocheting as part of The Wool Hut, Sunderland</h5>
             <div class="testimony-text">
               <h4>Trying to show that crocheting can be cool, trendy and beautiful ✌️ 🧶 !!!</h4>
